--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
+* {
+  font-family: Helvetica, sans-serif;
+}
+
+body {
+  padding: 60px;
+}
+
+.newCategoryForm {
+  margin-bottom: 1rem;
+}
+
+.labelError {
+  color: red;
+  font-size: 15px;
+  margin: 1rem;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-top: auto;
 }
